# WiiLink-Patcher-GUI

./: .gitignore  Makefile  README.md  TRANSLATING.md  WiiLinkPatcherGUI.py  build.ps1  pyproject.toml  requirements.txt  style.qss  update_translations.py
.github/workflows/: format_check.yml  push_build.yml  python-build.yml  tag_build.yml
data/: patches.json
flatpak/: .gitignore  build.sh  ca.wiilink.Patcher.desktop  ca.wiilink.Patcher.json  ca.wiilink.Patcher.metainfo.xml  ca.wiilink.Patcher.yml  prepare-flatpak-manifests.sh  python3-requirements.json  requirements.txt
modules/: consts.py  errors.py  widgets.py
setup/: custom.py  dokodemo.py  download.py  enums.py  express.py  extras.py  newsRenderer.py  patch.py  sd.py
src/WiiLinkPatcherGUI/: __main__.py  style.qss
src/WiiLinkPatcherGUI/data/: patches.json
src/WiiLinkPatcherGUI/modules/: consts.py  widgets.py
src/WiiLinkPatcherGUI/setup/: custom.py  dokodemo.py  download.py  enums.py  express.py  extras.py  newsRenderer.py  patch.py
src/WiiLinkPatcherGUI/translations/: languages.json  translation_ca.ts  translation_de.ts  translation_fr.ts  translation_hu.ts  translation_it.ts  translation_ko_KR.ts  translation_pt_BR.ts  translation_ru.ts
translations/: languages.json  translation_FR.ts  translation_IT.ts  translation_ca.ts  translation_fr.ts  translation_hu.ts  translation_it.ts  translation_ja.ts  translation_ko_KR.ts  translation_nl.ts  translation_pt_BR.ts  translation_ru.ts  translation_ru_RU.ts
