[project]
name = "WiiLinkPatcherGUI"

[tool.pyside6-project]
files = [
    "WiiLinkPatcherGUI.py",
    "./setup/express.py",
    "./setup/custom.py",
    "./setup/extras.py",
    "./setup/patch.py",
    "./setup/sd.py",
    "./setup/dokodemo.py",
    "./modules/widgets.py",
    "./translations/translation_fr.ts",
    "./translations/translation_hu.ts",
    "./translations/translation_it.ts",
    "./translations/translation_ja.ts",
    "./translations/translation_nl.ts",
    "./translations/translation_pt_BR.ts",
    "./translations/translation_ca.ts",
    # Example language file: "./translations/translation_xx[_XX].ts"
]